--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,5 +1,5 @@
 .item{
-    width: 350px;
+    width: 293px;
 }
 .item p{
     margin: 6px 0px;
@@ -11,7 +11,7 @@
 }
 .item-price-new{
     color: #374151;
-    font-size: 8px;
+    font-size: 18px;
     font-weight: 600;
 }
 .item-price-old{
@@ -23,4 +23,7 @@
 .item:hover{
     transform: scale(1.05);
     transition: 0.6s;
+}
+.item img{
+    width: 100%;
 }
