--- a/src/pages/CSS/ShopCategory.css
+++ b/src/pages/CSS/ShopCategory.css
@@ -21,6 +21,9 @@
     display: grid;
     grid-template-columns: repeat(4,1fr);
     row-gap: 80px;
+    width: 82%;
+    margin-left: 140px;
+    margin-top: 30px;
 }
 .shopcategory-loadmore{
     display: flex;
